# mai_oc

./: .gitignore
docs/: report_lab_1.md  report_lab_2.md  report_lab_3.md  report_lab_4.md  report_lab_5-7.md  report_lab_8.md
docs/docx/: report_kp.docx  report_lab_1.docx  report_lab_2.docx  report_lab_3.docx  report_lab_4.docx  report_lab_5-7.docx  report_lab_8.docx
docs/graph_lab_3/: graph_lab_3.py
docs/markdown/: report_kp.md
docs/straces_lab_8/: strace_lab_1.txt  strace_lab_2.txt  strace_lab_3.txt  strace_lab_4_prog_1.txt  strace_lab_4_prog_2.txt  strace_lab_5-7.txt
kp/: CMakeLists.txt  allocator.h  buddy_allocator.c  free_list_allocator.c  main.c
lab_1/: CMakeLists.txt  child_1.c  child_2.c  parent.c
lab_2/: CMakeLists.txt  main.c
lab_3/: CMakeLists.txt  child_1.c  child_2.c  parent.c
lab_4/: CMakeLists.txt  Derivative1.c  Derivative2.c  Pi1.c  Pi2.c  Program1.c  Program2.c
lab_5-7/: CMakeLists.txt  manager.cpp  message_queue.cpp  message_queue.hpp  worker.cpp
